# vocabulary_and_translation_gui

./: .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
docs/: project_documentation.tex
docs/source/: api.md  changes.md  conf.py  index.md
src/vocabulary_and_translation_gui/: DeeplKey.txt  __init__.py  create_interface.py  interface_and_features.py  interface_function.py  prepare_application.py  prepare_functions.py  save_functions.py  save_list.py  task_create_documentation_pdf.py  task_create_user_interface.py  task_prepare_interface.py  task_test_all_functions.py  translation_and_spelling.py  translation_functions.py
tests/: conftest.py  test_import.py  test_interface_and_features.py  test_prepare_application.py  test_save_list.py  test_translation_and_spelling.py
tests/test_files/: key.txt  no_key.txt
