[metadata]
name = vocabulary_and_translation_gui
description = A project to create a GUI where a user can enter a word or phrase. This expression can be translated to and from German, English and Turkish. The expression can be saved in an Excel or Anki file so that it can be learned as a vocabulary.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/irem-y/vocabulary_and_translation_gui
author = Ayse Irem Yilmaz
author_email = s6ayyilm@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/irem-y/vocabulary_and_translation_gui
    Documentation = https://github.com/irem-y/vocabulary_and_translation_gui
    Github = https://github.com/irem-y/vocabulary_and_translation_gui
    Tracker = https://github.com/irem-y/vocabulary_and_translation_gui/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/vocabulary_and_translation_gui/_version.py
